Add main menu component and Tailwind CSS integration
Introduced a new main menu component with HTML, TypeScript, and spec files. Integrated Tailwind CSS by modifying the global.scss file and updating dependencies in package-lock.json. Updated routing to include the main menu component.

--- a/mobile/roomyledger/src/app/tab1/tab1.page.html
+++ b/mobile/roomyledger/src/app/tab1/tab1.page.html
@@ -25,6 +25,7 @@
           </ion-thumbnail>
           <ion-label>Item</ion-label>
           <ion-badge color="success">APPROVED</ion-badge>
+          <ion-fab-button class="ml-52">Click</ion-fab-button>
         </ion-item>
 
         <ion-item>
