Add property dashboard module and routing
Introduced a new property dashboard feature with tabs for 'Listen Now', 'Radio', 'Library', and 'Search'. This includes updates to the main routing and dependencies, as well as navigation buttons in relevant components.

--- a/mobile/roomyledger/src/app/app.component.html
+++ b/mobile/roomyledger/src/app/app.component.html
@@ -10,6 +10,9 @@
         <ion-button routerLink="/manage-properties">Manage Properties</ion-button>
       </li>
       <li class="py-5">
+        <ion-button routerLink="/property-dashboard">Dashboard</ion-button>
+      </li>
+      <li class="py-5">
         <ion-button>Create Ledger</ion-button>
       </li>
       <li class="py-5">
