Rename 'Properties' to 'Ledgers' across components
Updated all instances of 'Properties' to 'Ledgers' in various components, HTML files, and state stores to better reflect naming conventions. Also, modified route paths and relevant imports to align with the new naming structure.

--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
@@ -1,4 +1,4 @@
-<p-button (onClick)="op.toggle($event)" icon="pi pi-euro" label="Create new Expense" />
+<p-button (onClick)="op.toggle($event)" icon="pi pi-dollar" label="Create new Expense" />
 <p-overlayPanel #op>
   <div class="flex flex-column gap-3 w-25rem">
     <div>
