--- a/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
@@ -8,7 +8,7 @@
   </div>
 </ng-template>
 <div class="flex-none flex align-items-center justify-content-center mt-2">
-  <app-h1-dark-mode [innerText]="'Manage Property'" class="text-3xl underline"/>
+  <app-h1-dark-mode [innerText]="'Manage Property Ledger'" class="text-3xl underline"/>
 </div>
 <ng-container *ngIf="propertiesStore.isLoading()">
   <div
