--- a/web/frontend/rl-angular-spa/src/app/app.component.html
+++ b/web/frontend/rl-angular-spa/src/app/app.component.html
@@ -74,16 +74,16 @@
               </li>
               <li>
                 <a
-                  [routerLink]="rebaseRoutePath(RoutePath.PROPERTIES_MANAGE)"
+                  [routerLink]="rebaseRoutePath(RoutePath.LEDGERS_MANAGE)"
                   class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
                   pRipple>
                   <i class="pi pi-bookmark mr-2"></i>
-                  <span class="font-medium">Manage Properties</span>
+                  <span class="font-medium">Manage Ledgers</span>
                 </a>
               </li>
               <li>
                 <a
-                  [routerLink]="rebaseRoutePath(RoutePath.PROPERTIES_CREATE)"
+                  [routerLink]="rebaseRoutePath(RoutePath.LEDGERS_CREATE)"
                   class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
                   pRipple>
                   <i class="pi pi-dollar mr-2"></i>
