--- a/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
@@ -30,6 +30,10 @@
      class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
   <app-expense-tab/>
 </div>
+<div *ngIf="activeItem?.label === items?.[CUSTOM_SPLITS_TAB_INDEX]?.label"
+     class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
+  <app-custom-splits-tab />
+</div>
 <div *ngIf="activeItem?.label === items?.[REPORTS_TAB_INDEX]?.label"
      class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
   <app-reports-tab (monthAndYearSelected)="loadExpensesForSelectedMonthAndYear($event)" [date]="date"/>
