--- a/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-dashboard/properties-dashboard.component.html
@@ -8,7 +8,7 @@
   </div>
 </ng-template>
 <div class="flex-none flex align-items-center justify-content-center mt-2">
-  <app-h1-dark-mode [innerText]="'Manage Property'" class="text-3xl underline"/>
+  <app-h1-dark-mode [innerText]="'Manage Property Ledger'" class="text-3xl underline"/>
 </div>
 <ng-container *ngIf="propertiesStore.isLoading()">
   <div
@@ -29,6 +29,10 @@
 <div *ngIf="activeItem?.label === items?.[EXPENSE_TAB_INDEX]?.label"
      class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
   <app-expense-tab/>
+</div>
+<div *ngIf="activeItem?.label === items?.[CUSTOM_SPLITS_TAB_INDEX]?.label"
+     class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
+  <app-custom-splits-tab />
 </div>
 <div *ngIf="activeItem?.label === items?.[REPORTS_TAB_INDEX]?.label"
      class="flex-none flex align-items-center justify-content-center mt-3 animate__animated animate__bounceInUp">
