Add expense proof upload and fix ShepherdService checks
Implemented an expense proof image upload feature in the ExpenseCreateOverlayPanel component and added various null checks to ShepherdService in PropertiesDashboard to prevent errors. Also, updated the dependencies and fixed relevant types.

--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
@@ -50,6 +50,19 @@
             type="number"
           />
         </p-inputGroup>
+        <p-inputGroup class="my-4">
+          <p-fileUpload
+            mode="basic"
+            chooseLabel="Choose Proof Image"
+            chooseIcon="pi pi-upload"
+            name="demo[]"
+            accept="image/*"
+            [fileLimit]="1"
+            [files]="expenseProofImages"
+            maxFileSize="10000000"
+            (onSelect)="selectProofImage($event)"
+          />
+        </p-inputGroup>
         <div class="flex justify-center items-center text-center my-3">
           <p-button
             (click)=doCreateExpense()
