--- a/web/frontend/rl-angular-spa/src/app/components/lib/dialogs/_expenses/expense-proof-dialog/expense-proof-dialog.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/dialogs/_expenses/expense-proof-dialog/expense-proof-dialog.component.html
@@ -6,10 +6,15 @@
     <span class="underline">Submitted By:</span>
     {{ submitterDisplayName }}
   </p>
-  <img
-    [ngSrc]="'assets/example-receipt-full.png'"
-    alt="Proof"
-    height="600"
-    width="600"
-  />
+  <ng-container *ngIf="!isLoading else loadingSpinner">
+    <img
+      [ngSrc]="photoUrl ?? 'assets/favicon.ico'"
+      alt="Proof"
+      height="600"
+      width="600"
+    />
+  </ng-container>
+  <ng-template #loadingSpinner>
+    <p-progressSpinner styleClass="w-10rem h-10rem" />
+  </ng-template>
 </div>
