Add optional label to proof image input
This change introduces an "(Optional)" label for clarity on the proof image upload field in the expense creation overlay panel. It enhances user experience by indicating that uploading a proof image is not mandatory.

--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
@@ -62,6 +62,9 @@
             maxFileSize="10000000"
             (onSelect)="selectProofImage($event)"
           />
+          <p-inputGroupAddon>
+            <span>(Optional)</span>
+          </p-inputGroupAddon>
         </p-inputGroup>
         <div class="flex justify-center items-center text-center my-3">
           <p-button
