Expense Proof Images (#20)
* Add expense proof upload and fix ShepherdService checks

Implemented an expense proof image upload feature in the ExpenseCreateOverlayPanel component and added various null checks to ShepherdService in PropertiesDashboard to prevent errors. Also, updated the dependencies and fixed relevant types.

* Fix error handling & refactor imports

Set `isLoading` to false upon error in `expense-proof-dialog.component.ts`. Refactor import order in `app.component.ts` and `default-app-providers.ts`. Add missing error logging in `expenses.store.ts`.

* Fix upload success toast placement in expenses store

Moved the success toast notification inside the conditional block to ensure it only shows when the file upload is successful. This prevents confusing notifications when the upload fails.

* Refactor expense-proof image logic to use ExpensesStore

Removed direct SupabaseService dependencies from expense-proof-dialog.component, replacing them with methods provided by ExpensesStore. This change centralizes image handling, improves separation of concerns, and enhances code maintainability by using a single source of truth for loading states and image URLs.

* Add Supabase integration for expense image URLs

Implemented SupabaseDbModule and updated expense services to use Supabase for generating image URLs. Refactored frontend components to consume the new image URLs and enhanced logging for better traceability.

* Reorganize import statements in app.module.ts

Moved the import statement for SupabaseDbModule to maintain alphabetical order among the imports. This change helps improve code readability and maintainability.

* Implement OnModuleInit in SupabaseDbService

Add OnModuleInit interface to initialize Supabase client only after module initialization. This ensures configuration values are correctly loaded before client creation.

* Fix potential undefined error in expenses service.

Added optional chaining to safely acce

--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
@@ -50,6 +50,22 @@
             type="number"
           />
         </p-inputGroup>
+        <p-inputGroup class="my-4">
+          <p-fileUpload
+            mode="basic"
+            chooseLabel="Choose Proof Image"
+            chooseIcon="pi pi-upload"
+            name="demo[]"
+            accept="image/*"
+            [fileLimit]="1"
+            [files]="expenseProofImages"
+            maxFileSize="10000000"
+            (onSelect)="selectProofImage($event)"
+          />
+          <p-inputGroupAddon>
+            <span>(Optional)</span>
+          </p-inputGroupAddon>
+        </p-inputGroup>
         <div class="flex justify-center items-center text-center my-3">
           <p-button
             (click)=doCreateExpense()
