Update labels and pricing plans UI
Changed labels from "Property" to "Ledger" in the properties-create component. Reorganized pricing plans, switching text and background colors, and updated pricing details and URLs to reflect the new billing structure.

--- a/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-create/properties-create.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/pages/_properties/properties-create/properties-create.component.html
@@ -10,7 +10,7 @@
         ngSrc="assets/favicon.ico"
         width="50"
       />
-      <div class="text-900 text-3xl font-medium mb-3">Create a Property</div>
+      <div class="text-900 text-3xl font-medium mb-3">Create a Ledger</div>
     </div>
     <div>
       <form (ngSubmit)="doCreateProperty()">
@@ -41,7 +41,7 @@
             [loading]="propertiesStore.isLoading()"
             class="w-full"
             icon="pi pi-home"
-            label="Create Property"
+            label="Create Ledger"
             type="submit"
           />
         </div>
