Add initial Prisma migration and upgrade dependencies
This commit introduces the initial Prisma migration with schema definitions and foreign key relationships. Additionally, it upgrades the "@prisma/client" and "prisma" packages to version 5.20.0, adds new dependencies like "add" and "yarn", and includes a conditional directive in the splash-banner component template.

--- a/web/frontend/rl-angular-spa/src/app/components/lib/splash-banner/splash-banner.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/splash-banner/splash-banner.component.html
@@ -38,7 +38,7 @@
         pRipple
       />
     </div>
-    <div class="animate__animated animate__delay-1s animate__tada">
+    <div class="animate__animated animate__delay-1s animate__tada" *ngIf="featureFlagsStore.isSignInWithEmailEnabled()">
       <app-email-login-overlay-panel [isNewCustomer]="isNewCustomer()" />
     </div>
     <div class="flex justify-center items-center text-center my-5">
