Add GBP support and refactor currency icon logic
Added GBP to currency codes and updated default currency to USD. Refactored currency symbol logic in the HTML to use a new method to enhance code readability and extensibility.

--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-create-overlay-panel/expense-create-overlay-panel.component.html
@@ -39,7 +39,7 @@
         <p-inputGroup class="my-4">
           <p-inputGroupAddon>
             <i
-              [classList]="currencyCode === 'EUR' ? 'pi pi-euro' : 'pi pi-dollar'"
+              [classList]="'pi ' + getCurrencySymbolClass(currencyCode)"
             ></i>
           </p-inputGroupAddon>
           <input
@@ -69,7 +69,7 @@
         <div class="flex justify-center items-center text-center my-3">
           <p-button
             (click)=doCreateExpense()
-            [icon]="currencyCode === 'EUR' ? 'pi pi-euro' : 'pi pi-dollar'"
+            [icon]="'pi ' + getCurrencySymbolClass(currencyCode)"
             [loading]="expensesStore.isLoading()"
             class="w-full"
             data-testid="create-expense-button"
