--- a/web/frontend/rl-angular-spa/src/app/components/lib/splash-banner/splash-banner.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/splash-banner/splash-banner.component.html
@@ -2,7 +2,8 @@
   <div class="text-center my-6">
     <h1 class="lg:text-6xl md:text-4xl sm:text-4xl font-bold mb-1">{{ getWelcomeMessage(isNewCustomer()) }}</h1>
     <h2
-      class="lg:text-6xl md:text-4xl sm:text-4xl lg:mt-3 text-primary font-bold mb-4 animate__animated animate__infinite animate__pulse">
+      class="lg:text-6xl md:text-4xl sm:text-4xl lg:mt-3 font-bold mb-4 animate__animated animate__infinite animate__pulse"
+    style="color: #2f89ba;">
       A Ledger for Roommates</h2>
     <div *ngIf="featureFlagsStore.isSignInWithGoogleEnabled()" class="flex justify-center items-center text-center my-5">
       <p-button
