--- a/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-table/expense-table.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_expenses/expense-table/expense-table.component.html
@@ -1,5 +1,5 @@
 <div class="card my-2">
-  <p-table [value]="expenses()" styleClass="p-datatable-striped">
+  <p-table [value]="expenses()" styleClass="p-datatable-striped consistent-table">
     <ng-template pTemplate="caption">
       <div class="flex align-items-center justify-content-between">
         {{ label() }}
