--- a/web/frontend/rl-angular-spa/src/app/components/lib/_properties/property-dashboard-people-tab/property-dashboard-people-tab.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_properties/property-dashboard-people-tab/property-dashboard-people-tab.component.html
@@ -1,31 +1,26 @@
 <div class="flex-none flex align-items-center justify-content-center my-3">
-  <app-property-invite-people-overlay-panel />
+  <app-property-invite-people-overlay-panel/>
 </div>
 <p-accordion class="w-full">
   @for (combinedEmailAndUser of propertiesStore.propertyByIdCombinedEmailsAndUsers(); track $index) {
     <p-accordionTab>
       <ng-template pTemplate="header">
-        <span class="flex align-items-center gap-2 w-full">
-          <p-avatar image="assets/favicon.ico" shape="circle" />
-          <span class="font-bold white-space-nowrap">{{ combinedEmailAndUser?.user?.profile?.displayName }}</span>
-          <small>{{ combinedEmailAndUser.email }}</small>
-          <span class="font-light">
-            {{
-              isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email)
-                ? 'Admin'
-                : ''
-            }}
+        <div class="flex align-items-center gap-2 w-full flex-wrap">
+          <p-avatar image="assets/favicon.ico" shape="circle"/>
+          <span class="font-bold">{{ combinedEmailAndUser?.user?.profile?.displayName }}</span>
+          <small class="white-space-normal">{{ combinedEmailAndUser.email }}</small>
+          <span class="font-medium white-space-normal p-badge p-badge-primary text-white">
+            {{ isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email) ? 'Admin' : '' }}
             {{
               isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email) &&
-              isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email)
-                ? ' and '
-                : ''
+              isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) ? ' and ' : ''
             }}
             {{ isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) ? 'Tenant' : '' }}
           </span>
-        </span>
+        </div>
       </ng-template>
-      <div class="my-2" *ngIf="!isIBANAvailableForEmail(combinedEmailAndUser.email) && !isRevTagAvailableForEmail(combinedEmailAndUser.email)">
+      <div class="my-2"
+           *ngIf="!isIBANAvailableForEmail(combinedEmailAndUser.email) && !isRevTagAvailableForEmail(combinedEmailAndUser.email)">
         <p>No user profile data provided</p>
       </div>
       <div class="my-2" *ngIf="isIBANAvailableForEmail(combinedEmailAndUser.email)">
@@ -53,8 +48,9 @@
         />
       </div>
       <ng-container *ngIf="isEmailAdmin(propertiesStore.propertyById(), userAuthenticationStore.currentUserEmail())">
-        <p-divider />
-        <p class="my-2" *ngIf="isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) || isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email)">
+        <p-divider/>
+        <p class="my-2"
+           *ngIf="isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) || isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email)">
           <p-button
             (click)="toggleAdministrator(propertiesStore.propertyById(), combinedEmailAndUser.email)"
             severity="danger"
@@ -65,7 +61,8 @@
             [raised]="true"
           />
         </p>
-        <p class="my-2" *ngIf="isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) || isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email)">
+        <p class="my-2"
+           *ngIf="isEmailTenant(propertiesStore.propertyById(), combinedEmailAndUser.email) || isEmailAdmin(propertiesStore.propertyById(), combinedEmailAndUser.email)">
           <p-button
             (click)="toggleTenant(propertiesStore.propertyById(), combinedEmailAndUser.email)"
             severity="warning"
