--- a/web/frontend/rl-angular-spa/src/app/components/pages/_account/manage-account/manage-account.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/pages/_account/manage-account/manage-account.component.html
@@ -1,5 +1,5 @@
-<section class="flex flex-column bg-black-alpha-90">
-  <div class="flex flex-column flex-auto bg-black-alpha-90">
+<section class="flex flex-column">
+  <div class="flex flex-column flex-auto">
     <div class="surface-section px-4 py-4 lg:py-5 lg:px-6 h-full">
       <div class="flex flex-column md:flex-row w-full justify-content-between md:align-items-center">
         <div>
@@ -13,57 +13,57 @@
         <ul
           class="list-none m-0 p-0 flex flex-row lg:flex-column justify-content-between lg:justify-content-start mb-5 lg:mb-0">
           <li>
-            <a [ngClass]="{'surface-200': activeTabIndex === profileTabIndex}" [queryParams]="{'tab': 'profile'}"
+            <a [ngClass]="{'bg-primary-100': activeTabIndex === profileTabIndex}" [queryParams]="{'tab': 'profile'}"
                [routerLink]="rebaseRoutePath(RoutePath.ACCOUNT_MANAGE)"
-               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:surface-200 transition-duration-150 transition-colors"
+               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:bg-primary-50 transition-duration-150 transition-colors"
                pRipple>
               <i
-                [ngClass]="{'text-700' : activeTabIndex === profileTabIndex, 'text-600': activeTabIndex !== profileTabIndex}"
+                [ngClass]="{'text-primary-700' : activeTabIndex === profileTabIndex, 'text-700': activeTabIndex !== profileTabIndex}"
                 class="pi pi-user md:mr-2"></i>
               <span
-                [ngClass]="{'text-800': activeTabIndex === profileTabIndex, 'text-700': activeTabIndex !== profileTabIndex}"
+                [ngClass]="{'text-primary-900': activeTabIndex === profileTabIndex, 'text-700': activeTabIndex !== profileTabIndex}"
                 class="font-medium hidden md:block">Profile</span>
             </a>
           </li>
           <li>
             <a
-              [ngClass]="{'surface-200': activeTabIndex === accountTabIndex}"
+              [ngClass]="{'bg-primary-100': activeTabIndex === accountTabIndex}"
               [queryParams]="{'tab': 'account'}" [routerLink]="rebaseRoutePath(RoutePath.ACCOUNT_MANAGE)"
-              class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:surface-200 transition-duration-150 transition-colors"
+              class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:bg-primary-50 transition-duration-150 transition-colors"
               pRipple>
               <i
-                [ngClass]="{'text-700' : activeTabIndex === accountTabIndex, 'text-600': activeTabIndex !== accountTabIndex}"
+                [ngClass]="{'text-primary-700' : activeTabIndex === accountTabIndex, 'text-700': activeTabIndex !== accountTabIndex}"
                 class="pi pi-cog md:mr-2"></i>
               <span
-                [ngClass]="{'text-800': activeTabIndex === accountTabIndex, 'text-700': activeTabIndex !== accountTabIndex}"
+                [ngClass]="{'text-primary-900': activeTabIndex === accountTabIndex, 'text-700': activeTabIndex !== accountTabIndex}"
                 class="font-medium hidden md:block">Account</span>
             </a>
           </li>
           <li>
-            <a [ngClass]="{'surface-200': activeTabIndex === premiumTabIndex}"
+            <a [ngClass]="{'bg-primary-100': activeTabIndex === premiumTabIndex}"
                [queryParams]="{'tab': 'premium'}"
                [routerLink]="rebaseRoutePath(RoutePath.ACCOUNT_MANAGE)"
-               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:surface-200 transition-duration-150 transition-colors"
+               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:bg-primary-50 transition-duration-150 transition-colors"
                pRipple>
               <i
-                [ngClass]="{'text-700' : activeTabIndex === premiumTabIndex, 'text-600': activeTabIndex !== premiumTabIndex}"
+                [ngClass]="{'text-primary-700' : activeTabIndex === premiumTabIndex, 'text-700': activeTabIndex !== premiumTabIndex}"
                 class="pi pi-bolt md:mr-2"></i>
               <span
-                [ngClass]="{'text-800': activeTabIndex === premiumTabIndex, 'text-700': activeTabIndex !== premiumTabIndex}"
+                [ngClass]="{'text-primary-900': activeTabIndex === premiumTabIndex, 'text-700': activeTabIndex !== premiumTabIndex}"
                 class="font-medium hidden md:block">Premium</span>
             </a>
           </li>
           <li>
-            <a [ngClass]="{'surface-200': activeTabIndex === notificationsTabIndex}"
+            <a [ngClass]="{'bg-primary-100': activeTabIndex === notificationsTabIndex}"
                [queryParams]="{'tab': 'notifications'}"
                [routerLink]="rebaseRoutePath(RoutePath.ACCOUNT_MANAGE)"
-               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:surface-200 transition-duration-150 transition-colors"
+               class="lg:w-15rem flex align-items-center cursor-pointer p-3 border-round hover:bg-primary-50 transition-duration-150 transition-colors"
                pRipple>
               <i
-                [ngClass]="{'text-700' : activeTabIndex === notificationsTabIndex, 'text-600': activeTabIndex !== notificationsTabIndex}"
+                [ngClass]="{'text-primary-700' : activeTabIndex === notificationsTabIndex, 'text-700': activeTabIndex !== notificationsTabIndex}"
                 class="pi pi-bell md:mr-2"></i>
               <span
-                [ngClass]="{'text-800': activeTabIndex === notificationsTabIndex, 'text-700': activeTabIndex !== notificationsTabIndex}"
+                [ngClass]="{'text-primary-900': activeTabIndex === notificationsTabIndex, 'text-700': activeTabIndex !== notificationsTabIndex}"
                 class="font-medium hidden md:block">Notifications</span>
             </a>
           </li>
